--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -91,10 +91,10 @@ jobs:
     uses: ./.github/workflows/third-party-RustDeskTempTopMostWindow.yml
     with:
       upload-artifact: true
-      target: windows-2022
+      target: self-hosted
       configuration: Release
       platform: x64
-      target_version: Windows10
+      target_version: Windows11
     strategy:
       fail-fast: false
 
@@ -110,7 +110,7 @@ jobs:
           # - { target: x86_64-pc-windows-gnu       , os: windows-2022                  }
           - {
               target: x86_64-pc-windows-msvc,
-              os: windows-2022,
+              os: self-hosted,
               arch: x86_64,
               vcpkg-triplet: x64-windows-static,
             }
